add network monitoring

--- a/HWiNFOgpu/HWiNFOgpu.ini
+++ b/HWiNFOgpu/HWiNFOgpu.ini
@@ -76,7 +76,7 @@ Power=[\xe315]
 [MeterAllBackground]
 Meter=Shape
 Shape=Rectangle 0.5,0.5,#BackgroundW#,#BackgroundH#,12 | Fill  LinearGradient1 MyGradient | StrokeWidth 1.5 | Stroke Color #FrameColor#
-MyGradient=270 | 255, 0, 0,200 ; 0.0 | 231, 76, 60,100 ; 0.4
+MyGradient=270 | 255, 0, 0,200 ; 0.0 | 231, 76, 60,200 ; 0.4
 ; Measures
 
 [MeasureCardName]
@@ -222,7 +222,7 @@ Meter=Shape
 X=17
 Y=2R
 Shape=Rectangle 0,2,#BarW#,#Shape1H# |  Fill Color #BarBackColor# | StrokeWidth 0
-Shape2=Rectangle 0,0,([MeasureGPUCoreLoad:%]*#BarW#/100),#Shape2H#,#Shape2R# | Fill LinearGradient1 MyGradient | StrokeWidth 0
+Shape2=Rectangle 0,0,([MeasureGPUCoreLoad:%]*#BarW#/100),#Shape2H#,#Shape2R# | Fill LinearGradient1 MyGradient | StrokeWidth 1 | Stroke Color 255,255,255
 MyGradient=180 | #G1# ; 0.0 | #G2# ; (0.25 + (100-[MeasureGPUCoreLoad:%])/100)| #G3# ; (0.5 + (100-[MeasureGPUCoreLoad:%])/100) | #G4# ; (0.75 + (100-[MeasureGPUCoreLoad:%])/100)
 DynamicVariables=1
 
@@ -248,7 +248,7 @@ Meter=Shape
 X=17
 Y=2R
 Shape=Rectangle 0,2,#BarW#,#Shape1H# |  Fill Color #BarBackColor# | StrokeWidth 0
-Shape2=Rectangle 0,0,([MeasureCoreClockSpeedMHz:%]*#BarW#/100),#Shape2H#,#Shape2R# | Fill LinearGradient1 MyGradient | StrokeWidth 0
+Shape2=Rectangle 0,0,([MeasureCoreClockSpeedMHz:%]*#BarW#/100),#Shape2H#,#Shape2R# | Fill LinearGradient1 MyGradient | StrokeWidth 1 | Stroke Color 255,255,255
 MyGradient=180 | #G1# ; 0.0 | #G2# ; (0.25 + (100-[MeasureCoreClockSpeedMHz:%])/100) | #G3# ; (0.5 + (100-[MeasureCoreClockSpeedMHz:%])/100) | #G4# ; (0.75 + (100-[MeasureCoreClockSpeedMHz:%])/100)
 DynamicVariables=1
 
@@ -274,7 +274,7 @@ Meter=Shape
 X=17
 Y=2R
 Shape=Rectangle 0,2,#BarW#,#Shape1H# |  Fill Color #BarBackColor# | StrokeWidth 0
-Shape2=Rectangle 0,0,([MeasureTempDegreesCenter:%]*#BarW#/100),#Shape2H#,#Shape2R# | Fill LinearGradient1 MyGradient | StrokeWidth 0
+Shape2=Rectangle 0,0,([MeasureTempDegreesCenter:%]*#BarW#/100),#Shape2H#,#Shape2R# | Fill LinearGradient1 MyGradient | StrokeWidth 1 | Stroke Color 255,255,255
 MyGradient=180 | #G1# ; 0.0 | #G2# ; (0.25 + (100-[MeasureTempDegreesCenter:%])/100) | #G3# ; (0.5 + (100-[MeasureTempDegreesCenter:%])/100) | #G4# ; (0.75 + (100-[MeasureTempDegreesCenter:%])/100)
 DynamicVariables=1
 
@@ -301,7 +301,7 @@ Meter=Shape
 X=17
 Y=2R
 Shape=Rectangle 0,2,#BarW#,#Shape1H# |  Fill Color #BarBackColor# | StrokeWidth 0
-Shape2=Rectangle 0,0,([MeasureTempDegreesEdge:%]*#BarW#/100),#Shape2H#,#Shape2R# | Fill LinearGradient1 MyGradient | StrokeWidth 0
+Shape2=Rectangle 0,0,([MeasureTempDegreesEdge:%]*#BarW#/100),#Shape2H#,#Shape2R# | Fill LinearGradient1 MyGradient | StrokeWidth 1 | Stroke Color 255,255,255
 MyGradient=180 | #G1# ; 0.0 | #G2# ; (0.25 + (100-[MeasureTempDegreesEdge:%])/100) | #G3# ; (0.5 + (100-[MeasureTempDegreesEdge:%])/100) | #G4# ; (0.75 + (100-[MeasureTempDegreesEdge:%])/100)
 DynamicVariables=1
 
@@ -328,7 +328,7 @@ Meter=Shape
 X=17
 Y=2R
 Shape=Rectangle 0,2,#BarW#,#Shape1H# |  Fill Color #BarBackColor# | StrokeWidth 0
-Shape2=Rectangle 0,0,([MeasureFanSpeedRPM:%]*#BarW#/100),#Shape2H#,#Shape2R# | Fill LinearGradient1 MyGradient | StrokeWidth 0
+Shape2=Rectangle 0,0,([MeasureFanSpeedRPM:%]*#BarW#/100),#Shape2H#,#Shape2R# | Fill LinearGradient1 MyGradient | StrokeWidth 1 | Stroke Color 255,255,255
 MyGradient=180 |#G1# ; 0.0 | #G2# ; (0.25 + (100-[MeasureFanSpeedRPM:%])/100) | #G3# ; (0.5 + (100-[MeasureFanSpeedRPM:%])/100) | #G4# ; (0.75 + (100-[MeasureFanSpeedRPM:%])/100)
 DynamicVariables=1
 
@@ -354,7 +354,7 @@ Meter=Shape
 X=17
 Y=2R
 Shape=Rectangle 0,2,#BarW#,#Shape1H# |  Fill Color #BarBackColor# | StrokeWidth 0
-Shape2=Rectangle 0,0,([MeasureGPUPowerW:%]*#BarW#/100),#Shape2H#,#Shape2R# | Fill LinearGradient1 MyGradient | StrokeWidth 0
+Shape2=Rectangle 0,0,([MeasureGPUPowerW:%]*#BarW#/100),#Shape2H#,#Shape2R# | Fill LinearGradient1 MyGradient | StrokeWidth 1 | Stroke Color 255,255,255
 MyGradient=180 | #G1# ; 0.0 | #G2# ; (0.25 + (100-[MeasureGPUPowerW:%])/100) | #G3# ; (0.5 + (100-[MeasureGPUPowerW:%])/100) | #G4# ; (0.75 + (100-[MeasureGPUPowerW:%])/100)
 DynamicVariables=1
 
@@ -380,7 +380,7 @@ Meter=Shape
 X=17
 Y=2R
 Shape=Rectangle 0,2,#BarW#,#Shape1H# |  Fill Color #BarBackColor# | StrokeWidth 0
-Shape2=Rectangle 0,0,([MeasureGPUMemoryClock:%]*#BarW#/100),#Shape2H#,#Shape2R# | Fill LinearGradient1 MyGradient | StrokeWidth 0
+Shape2=Rectangle 0,0,([MeasureGPUMemoryClock:%]*#BarW#/100),#Shape2H#,#Shape2R# | Fill LinearGradient1 MyGradient | StrokeWidth 1 | Stroke Color 255,255,255
 MyGradient=180 | #G1# ; 0.0 | #G2# ; (0.25 + (100-[MeasureGPUMemoryClock:%])/100) | #G3# ; (0.5 + (100-[MeasureGPUMemoryClock:%])/100) | #G4# ; (0.75 + (100-[MeasureGPUMemoryClock:%])/100)
 DynamicVariables=1
 
@@ -406,6 +406,6 @@ Meter=Shape
 X=17
 Y=2R
 Shape=Rectangle 0,2,#BarW#,#Shape1H# |  Fill Color #BarBackColor# | StrokeWidth 0
-Shape2=Rectangle 0,0,([MeasureGPUMemoryMB:%]*#BarW#/100),#Shape2H#,#Shape2R# | Fill LinearGradient1 MyGradient | StrokeWidth 0
+Shape2=Rectangle 0,0,([MeasureGPUMemoryMB:%]*#BarW#/100),#Shape2H#,#Shape2R# | Fill LinearGradient1 MyGradient | StrokeWidth 1 | Stroke Color 255,255,255
 MyGradient=180 | #G1# ; 0.0 | #G2# ; (0.25 + (100-[MeasureGPUMemoryMB:%])/100) | #G3# ; (0.5 + (100-[MeasureGPUMemoryMB:%])/100) | #G4# ; (0.75 + (100-[MeasureGPUMemoryMB:%])/100)
 DynamicVariables=1
