--- a/HWiNFOcpu/HWiNFOcpu.ini
+++ b/HWiNFOcpu/HWiNFOcpu.ini
@@ -60,8 +60,7 @@ Power=[\xe315]
 
 [MeterAllBackground]
 Meter=Shape
-Shape=Rectangle 0.5,0.5,#BackgroundW#,#BackgroundH#,12 | Fill  LinearGradient1 MyGradient | StrokeWidth 1.5 | Stroke Color #FrameColor#
-MyGradient=270 | 255, 0, 0,200 ; 0.0 | 231, 76, 60,200 ; 0.4
+Shape=Rectangle 0.5,0.5,#BackgroundW#,#BackgroundH#,12 | Fill Color 0, 0, 0,200 | StrokeWidth 0 | Stroke Color #FrameColor#
 
 ; Measures
 [MeasureCardName]
