--- a/HWiNFOnet/HWiNFOnet.ini
+++ b/HWiNFOnet/HWiNFOnet.ini
@@ -44,7 +44,6 @@ BackgroundColor=0,0,0,#BackgroundAlpha#
 BackgroundH=120
 BackgroundW=250
 
-
 ; Unit Symbol Variables
 Network=KB/s
 Data=MB
@@ -54,8 +53,7 @@ NetworkOut=[\xfbc1]
 
 [MeterAllBackground]
 Meter=Shape
-Shape=Rectangle 0.5,0.5,#BackgroundW#,#BackgroundH#,12 | Fill  LinearGradient1 MyGradient | StrokeWidth 1.5 | Stroke Color #FrameColor#
-MyGradient=270 | 255, 0, 0,200 ; 0.0 | 231, 76, 60,200 ; 0.4
+Shape=Rectangle 0.5,0.5,#BackgroundW#,#BackgroundH#,12 | Fill Color 0, 0, 0,200 | StrokeWidth 0 | Stroke Color #FrameColor#
 
 ; Measures
 [MeasureNetInSpeed]
