--- a/HWiNFOcpu/HWiNFOcpu.ini
+++ b/HWiNFOcpu/HWiNFOcpu.ini
@@ -11,52 +11,14 @@ Version=December 7, 2021
 License=Creative Commons Attribution-Non-Commercial-Share Alike 3.0
 
 [Variables]
+@IncludeVariables=#@#Setting.inc
+
 CPUName=1
 CPUMemoryMB=0
 CPUCoreClockSpeedMHz=1
 CPUCoreLoad=2
 CPUTempDegrees=3
 CPUPowerW=4
-
-
-; Font Variables
-TextFont=VictorMono NF
-
-; Color Variables
-LabelColor=250,250,250
-ValueColor=255,255,255
-FrameColor=255,0,0,255
-BarBackColor=#LabelColor#,75
-BackgroundAlpha=200
-BackgroundColor=255,0,0,#BackgroundAlpha#
-G1=177, 255, 145,255
-G2=200, 195, 47,255
-G3=214, 125, 0,255
-G4=212, 13, 18,255
-
-;Variable Size
-BackgroundH=220
-BackgroundW=250
-BarW=(#BackgroundW#-33)
-ValueX=(#BackgroundW#-15)
-Shape1H=1
-Shape2H=5
-Shape2R=3
-
-; Unit Symbol Variables
-Temperatures=C
-FanSpeeds=RPM
-Percents=%
-ClockSpeeds=MHz
-Memories=MB
-Powers=W
-
-Load=[\xf085]
-Clock=[\xf9c4]
-Temp=[\xfa0e]
-Memory=[\xf85a]
-Fan=[\xf70f]
-Power=[\xe315]
 
 [MeterAllBackground]
 Meter=Shape
@@ -145,7 +107,7 @@ NumOfDecimals=0
 Meter=String
 MeasureName=MeasureCardName
 MeterStyle=MeterTextStyle
-FontColor=118,211,0,255
+FontColor=#Accent#
 FontSize=12
 FontWeight=900
 X=(#BackgroundW#/2)
@@ -171,13 +133,9 @@ StringAlign=Right
 Text=%1 #Percents#
 
 [MeterCoreLoadBar]
-Meter=Shape
-X=17
-Y=2R
-DynamicVariables=1
-Shape=Rectangle 0,2,#BarW#,#Shape1H# |  Fill Color #BarBackColor# | StrokeWidth 0
-Shape2=Rectangle 0,0,([MeasureCPUCoreLoad:%]*#BarW#/100),#Shape2H#,#Shape2R# | Fill LinearGradient1 MyGradient | StrokeWidth 1 | Stroke Color 255,255,255
-MyGradient=180 | #G1# ; 0.0 | #G2# ; (0.25 + (100-[MeasureCPUCoreLoad:%])/100)| #G3# ; (0.5 + (100-[MeasureCPUCoreLoad:%])/100) | #G4# ; (0.75 + (100-[MeasureCPUCoreLoad:%])/100)
+MeasureName=MeasureCPUCoreLoad
+Meter=Bar
+MeterStyle=BarStyle
 
 [MeterCoreClockSpeedLabel]
 Meter=String
@@ -196,14 +154,10 @@ Y=0r
 StringAlign=Right
 Text=%1 #ClockSpeeds#
 
-[MeterCoreClockSpeedBar]
-Meter=Shape
-X=17
-Y=2R
-Shape=Rectangle 0,2,#BarW#,#Shape1H# |  Fill Color #BarBackColor# | StrokeWidth 0
-Shape2=Rectangle 0,0,([MeasureCoreClockSpeedMHz:%]*#BarW#/100),#Shape2H#,#Shape2R# | Fill LinearGradient1 MyGradient | StrokeWidth 1 | Stroke Color 255,255,255
-MyGradient=180 | #G1# ; 0.0 | #G2# ; (0.25 + (100-[MeasureCoreClockSpeedMHz:%])/100) | #G3# ; (0.5 + (100-[MeasureCoreClockSpeedMHz:%])/100) | #G4# ; (0.75 + (100-[MeasureCoreClockSpeedMHz:%])/100)
-DynamicVariables=1
+[CoreClockLoadBar]
+MeasureName=MeasureCoreClockSpeedMHz
+Meter=Bar
+MeterStyle=BarStyle
 
 [MeterTempLabel]
 Meter=String
@@ -222,14 +176,10 @@ Y=0r
 StringAlign=Right
 Text=%1 #Temperatures#
 
-[MeterTempDegreesBar]
-Meter=Shape
-X=17
-Y=2R
-Shape=Rectangle 0,2,#BarW#,#Shape1H# |  Fill Color #BarBackColor# | StrokeWidth 0
-Shape2=Rectangle 0,0,([MeasureTempDegrees:%]*#BarW#/100),#Shape2H#,#Shape2R# | Fill LinearGradient1 MyGradient | StrokeWidth 1 | Stroke Color 255,255,255
-MyGradient=180 | #G1# ; 0.0 | #G2# ; (0.25 + (100-[MeasureTempDegrees:%])/100) | #G3# ; (0.5 + (100-[MeasureTempDegrees:%])/100) | #G4# ; (0.75 + (100-[MeasureTempDegrees:%])/100)
-DynamicVariables=1
+[TempLoadBar]
+MeasureName=MeasureTempDegrees
+Meter=Bar
+MeterStyle=BarStyle
 
 [MeterPowerWLabel]
 Meter=String
@@ -248,14 +198,11 @@ Y=0r
 StringAlign=Right
 Text=%1 #Powers#
 
-[MeterPowerWBar]
-Meter=Shape
-X=17
-Y=2R
-Shape=Rectangle 0,2,#BarW#,#Shape1H# |  Fill Color #BarBackColor# | StrokeWidth 0
-Shape2=Rectangle 0,0,([MeasureCPUPowerW:%]*#BarW#/100),#Shape2H#,#Shape2R# | Fill LinearGradient1 MyGradient | StrokeWidth 1 | Stroke Color 255,255,255
-MyGradient=180 | #G1# ; 0.0 | #G2# ; (0.25 + (100-[MeasureCPUPowerW:%])/100) | #G3# ; (0.5 + (100-[MeasureCPUPowerW:%])/100) | #G4# ; (0.75 + (100-[MeasureCPUPowerW:%])/100)
-DynamicVariables=1
+[PowerWLoadBar]
+MeasureName=MeasureTempDegrees
+Meter=Bar
+MeterStyle=BarStyle
+
 
 [MeterMemoryMBLabel]
 Meter=String
@@ -274,11 +221,7 @@ Y=0r
 StringAlign=Right
 Text=%1 #Memories#
 
-[MeterMemoryBar]
-Meter=Shape
-X=17
-Y=2R
-Shape=Rectangle 0,2,#BarW#,#Shape1H# |  Fill Color #BarBackColor# | StrokeWidth 0
-Shape2=Rectangle 0,0,([MeasureCPUMemoryMB:%]*#BarW#/100),#Shape2H#,#Shape2R# | Fill LinearGradient1 MyGradient | StrokeWidth 1 | Stroke Color 255,255,255
-MyGradient=180 | #G1# ; 0.0 | #G2# ; (0.25 + (100-[MeasureCPUMemoryMB:%])/100) | #G3# ; (0.5 + (100-[MeasureCPUMemoryMB:%])/100) | #G4# ; (0.75 + (100-[MeasureCPUMemoryMB:%])/100)
-DynamicVariables=1
+[MeterMemoryMbBar]
+MeasureName=MeasureCPUMemoryMB
+Meter=Bar
+MeterStyle=BarStyle
