--- a/HWiNFOgpu/HWiNFOgpu.ini
+++ b/HWiNFOgpu/HWiNFOgpu.ini
@@ -11,17 +11,8 @@ Version=December 7, 2021
 License=Creative Commons Attribution-Non-Commercial-Share Alike 3.0
 
 [Variables]
-; * Skin Authors
-; The easiest way to do this is to create variables for each of the values you 
-; will be using in the skin. Give them easy to understand variable names.
-; * Skin Users
-; Right click this skin and select "Display Sensors"
-; That will create a list of all the sensor elements you are "outputting" from HWiNFO in your default browser.
-; Find the Index number for each of the elements the skin needs and set the variables accordingly.
-; Note that if you later go back into HWiNFO and add or remove elements to "output",
-; these Index numbers will change!
+@IncludeVariables=#@#Setting.inc
 
-; Sensor Variables - You will certainly need to change these
 GPUName=5
 GPUTempDegreesEdge=5
 GPUTempDegreesCenter=6
@@ -32,51 +23,9 @@ GPUMemoryClock=10
 GPUCoreLoad=11
 GPUMemoryMB=12
 
-; Font Variables
-TextFont=VictorMono NF
-
-; Color Variables
-LabelColor=250,250,250
-ValueColor=255,255,255
-FrameColor=255,0,0,255
-BarBackColor=#LabelColor#,75
-BackgroundAlpha=200
-BackgroundColor=0,0,0,#BackgroundAlpha#
-G1=177, 255, 145,255
-G2=200, 195, 47,255
-G3=214, 125, 0,255
-G4=212, 13, 18,255
-
-
-;Variable Size
-BackgroundH=340
-BackgroundW=250
-BarW=(#BackgroundW#-33)
-ValueX=(#BackgroundW#-15)
-Shape1H=1
-Shape2H=5
-Shape2R=3
-
-
-; Unit Symbol Variables
-Temperatures=C
-FanSpeeds=RPM
-Percents=%
-ClockSpeeds=MHz
-Memories=MB
-Powers=W
-
-Load=[\xf085]
-Clock=[\xf9c4]
-Temp=[\xfa0e]
-Memory=[\xf85a]
-Fan=[\xf70f]
-Power=[\xe315]
-
 [MeterAllBackground]
 Meter=Shape
-Shape=Rectangle 0.5,0.5,#BackgroundW#,#BackgroundH#,12 | Fill Color 0, 0, 0,200 | StrokeWidth 0 | Stroke Color #FrameColor#
-
+Shape=Rectangle 0.5,0.5,#BackgroundW#,330,12 | Fill Color 0, 0, 0,200 | StrokeWidth 0 | Stroke Color #FrameColor#
 
 ; Measures
 [MeasureCardName]
@@ -217,14 +166,10 @@ Y=0r
 StringAlign=Right
 Text=%1 #Percents#
 
-[MeterCoreLoadBar]
-Meter=Shape
-X=17
-Y=2R
-Shape=Rectangle 0,2,#BarW#,#Shape1H# |  Fill Color #BarBackColor# | StrokeWidth 0
-Shape2=Rectangle 0,0,([MeasureGPUCoreLoad:%]*#BarW#/100),#Shape2H#,#Shape2R# | Fill LinearGradient1 MyGradient | StrokeWidth 1 | Stroke Color 255,255,255
-MyGradient=180 | #G1# ; 0.0 | #G2# ; (0.25 + (100-[MeasureGPUCoreLoad:%])/100)| #G3# ; (0.5 + (100-[MeasureGPUCoreLoad:%])/100) | #G4# ; (0.75 + (100-[MeasureGPUCoreLoad:%])/100)
-DynamicVariables=1
+[CoreLoadLoadBar]
+MeasureName=MeasureGPUCoreLoad
+Meter=Bar
+MeterStyle=BarStyle
 
 [MeterCoreClockSpeedLabel]
 Meter=String
@@ -243,14 +188,10 @@ Y=0r
 StringAlign=Right
 Text=%1 #ClockSpeeds#
 
-[MeterCoreClockSpeedBar]
-Meter=Shape
-X=17
-Y=2R
-Shape=Rectangle 0,2,#BarW#,#Shape1H# |  Fill Color #BarBackColor# | StrokeWidth 0
-Shape2=Rectangle 0,0,([MeasureCoreClockSpeedMHz:%]*#BarW#/100),#Shape2H#,#Shape2R# | Fill LinearGradient1 MyGradient | StrokeWidth 1 | Stroke Color 255,255,255
-MyGradient=180 | #G1# ; 0.0 | #G2# ; (0.25 + (100-[MeasureCoreClockSpeedMHz:%])/100) | #G3# ; (0.5 + (100-[MeasureCoreClockSpeedMHz:%])/100) | #G4# ; (0.75 + (100-[MeasureCoreClockSpeedMHz:%])/100)
-DynamicVariables=1
+[CoreClockSpeedLoadBar]
+MeasureName=MeasureCoreClockSpeedMHz
+Meter=Bar
+MeterStyle=BarStyle
 
 [MeterTempCenterLabel]
 Meter=String
@@ -269,14 +210,10 @@ Y=0r
 StringAlign=Right
 Text=%1 #Temperatures#
 
-[MeterTempDegreesCenterBar]
-Meter=Shape
-X=17
-Y=2R
-Shape=Rectangle 0,2,#BarW#,#Shape1H# |  Fill Color #BarBackColor# | StrokeWidth 0
-Shape2=Rectangle 0,0,([MeasureTempDegreesCenter:%]*#BarW#/100),#Shape2H#,#Shape2R# | Fill LinearGradient1 MyGradient | StrokeWidth 1 | Stroke Color 255,255,255
-MyGradient=180 | #G1# ; 0.0 | #G2# ; (0.25 + (100-[MeasureTempDegreesCenter:%])/100) | #G3# ; (0.5 + (100-[MeasureTempDegreesCenter:%])/100) | #G4# ; (0.75 + (100-[MeasureTempDegreesCenter:%])/100)
-DynamicVariables=1
+[TempDegreesLoadBar]
+MeasureName=MeasureTempDegreesCenter
+Meter=Bar
+MeterStyle=BarStyle
 
 
 [MeterTempEdgeLabel]
@@ -296,15 +233,10 @@ Y=0r
 StringAlign=Right
 Text=%1 #Temperatures#
 
-[MeterTempDegreesEdgeBar]
-Meter=Shape
-X=17
-Y=2R
-Shape=Rectangle 0,2,#BarW#,#Shape1H# |  Fill Color #BarBackColor# | StrokeWidth 0
-Shape2=Rectangle 0,0,([MeasureTempDegreesEdge:%]*#BarW#/100),#Shape2H#,#Shape2R# | Fill LinearGradient1 MyGradient | StrokeWidth 1 | Stroke Color 255,255,255
-MyGradient=180 | #G1# ; 0.0 | #G2# ; (0.25 + (100-[MeasureTempDegreesEdge:%])/100) | #G3# ; (0.5 + (100-[MeasureTempDegreesEdge:%])/100) | #G4# ; (0.75 + (100-[MeasureTempDegreesEdge:%])/100)
-DynamicVariables=1
-
+[TempDegreesEdgeLoadBar]
+MeasureName=MeasureTempDegreesCenter
+Meter=Bar
+MeterStyle=BarStyle
 
 [MeterFanSpeedLabel]
 Meter=String
@@ -323,14 +255,10 @@ Y=0r
 StringAlign=Right
 Text=%1 #FanSpeeds#
 
-[MeterFanSpeedRPMBar]
-Meter=Shape
-X=17
-Y=2R
-Shape=Rectangle 0,2,#BarW#,#Shape1H# |  Fill Color #BarBackColor# | StrokeWidth 0
-Shape2=Rectangle 0,0,([MeasureFanSpeedRPM:%]*#BarW#/100),#Shape2H#,#Shape2R# | Fill LinearGradient1 MyGradient | StrokeWidth 1 | Stroke Color 255,255,255
-MyGradient=180 |#G1# ; 0.0 | #G2# ; (0.25 + (100-[MeasureFanSpeedRPM:%])/100) | #G3# ; (0.5 + (100-[MeasureFanSpeedRPM:%])/100) | #G4# ; (0.75 + (100-[MeasureFanSpeedRPM:%])/100)
-DynamicVariables=1
+[FanSpeedLoadBar]
+MeasureName=MeasureFanSpeedRPM
+Meter=Bar
+MeterStyle=BarStyle
 
 [MeterPowerWLabel]
 Meter=String
@@ -350,13 +278,9 @@ StringAlign=Right
 Text=%1 #Powers#
 
 [MeterPowerWBar]
-Meter=Shape
-X=17
-Y=2R
-Shape=Rectangle 0,2,#BarW#,#Shape1H# |  Fill Color #BarBackColor# | StrokeWidth 0
-Shape2=Rectangle 0,0,([MeasureGPUPowerW:%]*#BarW#/100),#Shape2H#,#Shape2R# | Fill LinearGradient1 MyGradient | StrokeWidth 1 | Stroke Color 255,255,255
-MyGradient=180 | #G1# ; 0.0 | #G2# ; (0.25 + (100-[MeasureGPUPowerW:%])/100) | #G3# ; (0.5 + (100-[MeasureGPUPowerW:%])/100) | #G4# ; (0.75 + (100-[MeasureGPUPowerW:%])/100)
-DynamicVariables=1
+MeasureName=MeasureGPUPowerW
+Meter=Bar
+MeterStyle=BarStyle
 
 [MeterMemoryClockLabel]
 Meter=String
@@ -376,13 +300,10 @@ StringAlign=Right
 Text=%1 #ClockSpeeds#
 
 [MeterMemoryClockBar]
-Meter=Shape
-X=17
-Y=2R
-Shape=Rectangle 0,2,#BarW#,#Shape1H# |  Fill Color #BarBackColor# | StrokeWidth 0
-Shape2=Rectangle 0,0,([MeasureGPUMemoryClock:%]*#BarW#/100),#Shape2H#,#Shape2R# | Fill LinearGradient1 MyGradient | StrokeWidth 1 | Stroke Color 255,255,255
-MyGradient=180 | #G1# ; 0.0 | #G2# ; (0.25 + (100-[MeasureGPUMemoryClock:%])/100) | #G3# ; (0.5 + (100-[MeasureGPUMemoryClock:%])/100) | #G4# ; (0.75 + (100-[MeasureGPUMemoryClock:%])/100)
-DynamicVariables=1
+MeasureName=MeasureGPUMemoryClock
+Meter=Bar
+MeterStyle=BarStyle
+
 
 [MeterMemoryMBLabel]
 Meter=String
@@ -402,10 +323,6 @@ StringAlign=Right
 Text=%1 #Memories#
 
 [MeterMemoryBar]
-Meter=Shape
-X=17
-Y=2R
-Shape=Rectangle 0,2,#BarW#,#Shape1H# |  Fill Color #BarBackColor# | StrokeWidth 0
-Shape2=Rectangle 0,0,([MeasureGPUMemoryMB:%]*#BarW#/100),#Shape2H#,#Shape2R# | Fill LinearGradient1 MyGradient | StrokeWidth 1 | Stroke Color 255,255,255
-MyGradient=180 | #G1# ; 0.0 | #G2# ; (0.25 + (100-[MeasureGPUMemoryMB:%])/100) | #G3# ; (0.5 + (100-[MeasureGPUMemoryMB:%])/100) | #G4# ; (0.75 + (100-[MeasureGPUMemoryMB:%])/100)
-DynamicVariables=1
+MeasureName=MeasureGPUMemoryMB
+Meter=Bar
+MeterStyle=BarStyle
