cpu list design

--- a/HWiNFOgpu/HWiNFOgpu.ini
+++ b/HWiNFOgpu/HWiNFOgpu.ini
@@ -117,16 +117,7 @@ MaxValue=12000
 RegExpSubstitute=1
 Substitute="^.*]:":""
 
-; Meters
-
-[MeterTextStyle]
-FontFace=#TextFont#
-FontColor=#ValueColor#
-FontSize=10
-;StringStyle=Bold
-FontWeight=400
-AntiAlias=1
-NumOfDecimals=0
+; ========================================= Meters =============================================;
 
 [MeterValueTextStyle]
 FontFace=#TextFont#
@@ -140,7 +131,7 @@ NumOfDecimals=0
 [MeterCardName]
 Meter=String
 MeasureName=MeasureCardName
-MeterStyle=MeterTextStyle
+MeterStyle=MeterLabelStyle
 FontColor=118,211,0,255
 FontSize=12
 FontWeight=900
@@ -148,13 +139,15 @@ X=(#BackgroundW#/2)
 Y=10
 StringAlign=Center
 
+[MeterCoreLoadIcon]
+Meter=String
+MeterStyle=MeterIconStyle
+Text=#Load#
 
 [MeterCoreLoadLabel]
 Meter=String
-MeterStyle=MeterTextStyle
-Text=#Load#  Load
-X=15
-Y=10R
+MeterStyle=MeterLabelStyle
+Text=Load
 StringAlign=Left
 
 [MeterCoreLoad]
@@ -171,13 +164,15 @@ MeasureName=MeasureGPUCoreLoad
 Meter=Bar
 MeterStyle=BarStyle
 
+[MeterCoreClockSpeedIcon]
+Meter=String
+MeterStyle=MeterIconStyle
+Text=#Clock#
+
 [MeterCoreClockSpeedLabel]
 Meter=String
-MeterStyle=MeterTextStyle
-Text=#Clock#  Clock
-X=15
-Y=10R
-StringAlign=Left
+MeterStyle=MeterLabelStyle
+Text=Clock
 
 [MeterCoreClockSpeedMHz]
 Meter=String
@@ -193,12 +188,15 @@ MeasureName=MeasureCoreClockSpeedMHz
 Meter=Bar
 MeterStyle=BarStyle
 
+[MeterTempCenterIcon]
+Meter=String
+MeterStyle=MeterIconStyle
+Text=#Temp#
+
 [MeterTempCenterLabel]
 Meter=String
-Text=#Temp#  Temp - Center
-MeterStyle=MeterTextStyle
-X=15
-Y=10R
+Text=Temp - Center
+MeterStyle=MeterLabelStyle
 StringAlign=Left
 
 [MeterTempDegreesCenter]
@@ -215,13 +213,15 @@ MeasureName=MeasureTempDegreesCenter
 Meter=Bar
 MeterStyle=BarStyle
 
+[MeterTempEdgeIcon]
+Meter=String
+MeterStyle=MeterIconStyle
+Text=#Temp#
 
 [MeterTempEdgeLabel]
 Meter=String
-Text=#Temp#  Temp - Edge
-MeterStyle=MeterTextStyle
-X=15
-Y=10R
+Text=Temp - Edge
+MeterStyle=MeterLabelStyle
 StringAlign=Left
 
 [MeterTempDegreesEdge]
@@ -238,12 +238,15 @@ MeasureName=MeasureTempDegreesCenter
 Meter=Bar
 MeterStyle=BarStyle
 
+[MeterFanSpeedIcon]
+Meter=String
+MeterStyle=MeterIconStyle
+Text=#Fan#
+
 [MeterFanSpeedLabel]
 Meter=String
-MeterStyle=MeterTextStyle
-Text=#Fan#  Fan Speed
-X=15
-Y=10R
+MeterStyle=MeterLabelStyle
+Text=Fan
 StringAlign=Left
 
 [MeterFanSpeedRPM]
@@ -260,12 +263,15 @@ MeasureName=MeasureFanSpeedRPM
 Meter=Bar
 MeterStyle=BarStyle
 
+[MeterPowerWIcon]
+Meter=String
+MeterStyle=MeterIconStyle
+Text=#Power#
+
 [MeterPowerWLabel]
 Meter=String
-MeterStyle=MeterTextStyle
-Text=#Power#  TGP
-X=15
-Y=10R
+MeterStyle=MeterLabelStyle
+Text=TGP
 StringAlign=Left
 
 [MeterPowerW]
@@ -282,12 +288,15 @@ MeasureName=MeasureGPUPowerW
 Meter=Bar
 MeterStyle=BarStyle
 
+[MeterMemoryClockIcon]
+Meter=String
+MeterStyle=MeterIconStyle
+Text=#Clock#
+
 [MeterMemoryClockLabel]
 Meter=String
-MeterStyle=MeterTextStyle
-Text=#Memory#  Memory Clock
-X=15
-Y=10R
+MeterStyle=MeterLabelStyle
+Text=Memory Clock
 StringAlign=Left
 
 [MeterMemoryClock]
@@ -304,13 +313,15 @@ MeasureName=MeasureGPUMemoryClock
 Meter=Bar
 MeterStyle=BarStyle
 
+[MeterMemoryMBIcon]
+Meter=String
+MeterStyle=MeterIconStyle
+Text=#Memory#
 
 [MeterMemoryMBLabel]
 Meter=String
-MeterStyle=MeterTextStyle
-Text=#Memory#  Memory Usage
-X=15
-Y=10R
+MeterStyle=MeterLabelStyle
+Text=Memory Usage
 StringAlign=Left
 
 [MeterMemoryMB]
