--- a/HWiNFOcpu/HWiNFOcpu.ini
+++ b/HWiNFOcpu/HWiNFOcpu.ini
@@ -22,7 +22,7 @@ CPUPowerW=4
 
 [MeterAllBackground]
 Meter=Shape
-Shape=Rectangle 0.5,0.5,#BackgroundW#,#BackgroundH#,12 | Fill Color 0, 0, 0,200 | StrokeWidth 0 | Stroke Color #FrameColor#
+Shape=Rectangle 0.5,0.5,#BackgroundW#,220,12 | Fill Color #BackgroundColor# | StrokeWidth 0 | Stroke Color #FrameColor#
 
 ; Measures
 [MeasureCardName]
@@ -85,7 +85,7 @@ RegExpSubstitute=1
 Substitute="^.*]:":""
 
 ; Meters
-[MeterTextStyle]
+[MeterLabelStyle]
 FontFace=#TextFont#
 FontColor=#ValueColor#
 FontSize=10
@@ -106,7 +106,7 @@ NumOfDecimals=0
 [MeterCardName]
 Meter=String
 MeasureName=MeasureCardName
-MeterStyle=MeterTextStyle
+MeterStyle=MeterLabelStyle
 FontColor=#Accent#
 FontSize=12
 FontWeight=900
@@ -114,14 +114,15 @@ X=(#BackgroundW#/2)
 Y=10
 StringAlign=Center
 
+[MeterCoreLoadIcon]
+Meter=String
+MeterStyle=MeterIconStyle
+Text=#Load#
 
 [MeterCoreLoadLabel]
 Meter=String
-MeterStyle=MeterTextStyle
-Text=#Load#  Load
-X=15
-Y=10R
-StringAlign=Left
+MeterStyle=MeterLabelStyle
+Text=Load
 
 [MeterCoreLoad]
 Meter=String
@@ -137,13 +138,15 @@ MeasureName=MeasureCPUCoreLoad
 Meter=Bar
 MeterStyle=BarStyle
 
+[MeterCoreClockSpeedIcon]
+Meter=String
+MeterStyle=MeterIconStyle
+Text=#Clock#
+
 [MeterCoreClockSpeedLabel]
 Meter=String
-MeterStyle=MeterTextStyle
-Text=#Clock#  Clock
-X=15
-Y=10R
-StringAlign=Left
+MeterStyle=MeterLabelStyle
+Text=Clock
 
 [MeterCoreClockSpeedMHz]
 Meter=String
@@ -154,20 +157,22 @@ Y=0r
 StringAlign=Right
 Text=%1 #ClockSpeeds#
 
-[CoreClockLoadBar]
+[CoreClockSpeedBar]
 MeasureName=MeasureCoreClockSpeedMHz
 Meter=Bar
 MeterStyle=BarStyle
 
+[MeterTempIcon]
+Meter=String
+MeterStyle=MeterIconStyle
+Text=#Temp#
+
 [MeterTempLabel]
 Meter=String
-Text=#Temp#  Temp
-MeterStyle=MeterTextStyle
-X=15
-Y=10R
-StringAlign=Left
+Text=Temp
+MeterStyle=MeterLabelStyle
 
-[MeterTempDegreesCenter]
+[MeterTemp]
 Meter=String
 MeasureName=MeasureTempDegrees
 MeterStyle=MeterValueTextStyle
@@ -176,18 +181,20 @@ Y=0r
 StringAlign=Right
 Text=%1 #Temperatures#
 
-[TempLoadBar]
+[TempBar]
 MeasureName=MeasureTempDegrees
 Meter=Bar
 MeterStyle=BarStyle
 
+[MeterPowerIcon]
+Meter=String
+MeterStyle=MeterIconStyle
+Text=#Power#
+
 [MeterPowerWLabel]
 Meter=String
-MeterStyle=MeterTextStyle
-Text=#Power#  TCP
-X=15
-Y=10R
-StringAlign=Left
+MeterStyle=MeterLabelStyle
+Text=TCP
 
 [MeterPowerW]
 Meter=String
@@ -203,14 +210,15 @@ MeasureName=MeasureTempDegrees
 Meter=Bar
 MeterStyle=BarStyle
 
+[MeterMemoryIcon]
+Meter=String
+MeterStyle=MeterIconStyle
+Text=#Memory#
 
 [MeterMemoryMBLabel]
 Meter=String
-MeterStyle=MeterTextStyle
-Text=#Memory#  Memory Usage
-X=15
-Y=10R
-StringAlign=Left
+MeterStyle=MeterLabelStyle
+Text=Memory Usage
 
 [MeterMemoryMB]
 Meter=String
