--- a/HWiNFOgpu/HWiNFOgpu.ini
+++ b/HWiNFOgpu/HWiNFOgpu.ini
@@ -25,9 +25,10 @@ GPUMemoryMB=12
 
 [MeterAllBackground]
 Meter=Shape
-Shape=Rectangle 0.5,0.5,#BackgroundW#,330,12 | Fill Color 0, 0, 0,200 | StrokeWidth 0 | Stroke Color #FrameColor#
+Shape=Rectangle 0.5,0.5,#BackgroundW#,350,12 | Fill Color #BackgroundColor# | StrokeWidth 0 | Stroke Color #FrameColor#
 
-; Measures
+
+;==================== Measures ========================;
 [MeasureCardName]
 Measure=Registry
 RegHKey=HKEY_CURRENT_USER
@@ -136,7 +137,8 @@ FontColor=118,211,0,255
 FontSize=12
 FontWeight=900
 X=(#BackgroundW#/2)
-Y=10
+Y=15
+H=30
 StringAlign=Center
 
 [MeterCoreLoadIcon]
@@ -148,7 +150,6 @@ Text=#Load#
 Meter=String
 MeterStyle=MeterLabelStyle
 Text=Load
-StringAlign=Left
 
 [MeterCoreLoad]
 Meter=String
@@ -232,7 +233,7 @@ StringAlign=Right
 Text=%1 #Temperatures#
 
 [TempDegreesEdgeLoadBar]
-MeasureName=MeasureTempDegreesCenter
+MeasureName=MeasureTempDegreesEdge
 Meter=Bar
 MeterStyle=BarStyle
 
