--- a/HWiNFOcpu/HWiNFOcpu.ini
+++ b/HWiNFOcpu/HWiNFOcpu.ini
@@ -22,9 +22,9 @@ CPUPowerW=4
 
 [MeterAllBackground]
 Meter=Shape
-Shape=Rectangle 0.5,0.5,#BackgroundW#,220,12 | Fill Color #BackgroundColor# | StrokeWidth 0 | Stroke Color #FrameColor#
+Shape=Rectangle 0.5,0.5,#BackgroundW#,250,12 | Fill Color #BackgroundColor# | StrokeWidth 0 | Stroke Color #FrameColor#
 
-; Measures
+;=======================================Measures============================================;
 [MeasureCardName]
 Measure=Registry
 RegHKey=HKEY_CURRENT_USER
@@ -84,24 +84,7 @@ MaxValue=32000
 RegExpSubstitute=1
 Substitute="^.*]:":""
 
-; Meters
-[MeterLabelStyle]
-FontFace=#TextFont#
-FontColor=#ValueColor#
-FontSize=10
-;StringStyle=Bold
-FontWeight=400
-AntiAlias=1
-NumOfDecimals=0
-
-[MeterValueTextStyle]
-FontFace=#TextFont#
-FontColor=#ValueColor#
-FontSize=10
-;StringStyle=Bold
-FontWeight=900
-AntiAlias=1
-NumOfDecimals=0
+;===============================================Meters======================================;
 
 [MeterCardName]
 Meter=String
@@ -111,7 +94,8 @@ FontColor=#Accent#
 FontSize=12
 FontWeight=900
 X=(#BackgroundW#/2)
-Y=10
+Y=15
+H=30
 StringAlign=Center
 
 [MeterCoreLoadIcon]
