--- a/HWiNFOgpu/HWiNFOgpu.ini
+++ b/HWiNFOgpu/HWiNFOgpu.ini
@@ -114,26 +114,16 @@ RegHKey=HKEY_CURRENT_USER
 RegKey=SOFTWARE\HWiNFO32\VSB
 RegValue=ValueRaw#GPUMemoryMB#
 MinValue=0
-MaxValue=12000
+MaxValue=12288
 RegExpSubstitute=1
 Substitute="^.*]:":""
 
 ; ========================================= Meters =============================================;
-
-[MeterValueTextStyle]
-FontFace=#TextFont#
-FontColor=#ValueColor#
-FontSize=10
-;StringStyle=Bold
-FontWeight=900
-AntiAlias=1
-NumOfDecimals=0
-
 [MeterCardName]
 Meter=String
 MeasureName=MeasureCardName
 MeterStyle=MeterLabelStyle
-FontColor=118,211,0,255
+FontColor=#Accent#
 FontSize=12
 FontWeight=900
 X=(#BackgroundW#/2)
