--- a/HWiNFOcpu/HWiNFOcpu.ini
+++ b/HWiNFOcpu/HWiNFOcpu.ini
@@ -25,15 +25,6 @@ Meter=Shape
 Shape=Rectangle 0.5,0.5,#BackgroundW#,250,12 | Fill Color #BackgroundColor# | StrokeWidth 0 | Stroke Color #FrameColor#
 
 ;=======================================Measures============================================;
-[MeasureCardName]
-Measure=Registry
-RegHKey=HKEY_CURRENT_USER
-RegKey=SOFTWARE\HWiNFO32\VSB
-RegValue=Sensor#CPUName#
-UpdateDivider=-1
-RegExpSubstitute=1
-Substitute="^.*]:":"",":":""
-
 [MeasureTempDegrees]
 Measure=Registry
 RegHKey=HKEY_CURRENT_USER
@@ -88,14 +79,23 @@ Substitute="^.*]:":""
 
 [MeterCardName]
 Meter=String
-MeasureName=MeasureCardName
+Text=CPU
 MeterStyle=MeterLabelStyle
 FontColor=#Accent#
 FontSize=12
 FontWeight=900
 X=(#BackgroundW#/2)
 Y=15
-H=30
+StringAlign=Center
+
+[MeterCardName2]
+Meter=String
+Text=[AMD Ryzen 3600]
+MeterStyle=MeterLabelStyle
+FontColor=#Accent#
+FontSize=8
+X=(#BackgroundW#/2)
+Y=0R
 StringAlign=Center
 
 [MeterCoreLoadIcon]
