--- a/HWiNFOgpu/HWiNFOgpu.ini
+++ b/HWiNFOgpu/HWiNFOgpu.ini
@@ -29,15 +29,6 @@ Shape=Rectangle 0.5,0.5,#BackgroundW#,350,12 | Fill Color #BackgroundColor# | St
 
 
 ;==================== Measures ========================;
-[MeasureCardName]
-Measure=Registry
-RegHKey=HKEY_CURRENT_USER
-RegKey=SOFTWARE\HWiNFO32\VSB
-RegValue=Sensor#GPUName#
-UpdateDivider=-1
-RegExpSubstitute=1
-Substitute="^.*]:":"",":":""
-
 [MeasureTempDegreesCenter]
 Measure=Registry
 RegHKey=HKEY_CURRENT_USER
@@ -121,14 +112,24 @@ Substitute="^.*]:":""
 ; ========================================= Meters =============================================;
 [MeterCardName]
 Meter=String
-MeasureName=MeasureCardName
 MeterStyle=MeterLabelStyle
+Text=GPU
 FontColor=#Accent#
 FontSize=12
 FontWeight=900
 X=(#BackgroundW#/2)
 Y=15
-H=30
+StringAlign=Center
+
+[MeterCardName2]
+Meter=String
+MeterStyle=MeterLabelStyle
+Text=[SAPPHIRE RX 6750 XT]
+FontColor=#Accent#
+FontSize=8
+FontWeight=900
+X=(#BackgroundW#/2)
+Y=0R
 StringAlign=Center
 
 [MeterCoreLoadIcon]
