recreate net meter

--- a/HWiNFOnet/HWiNFOnet.ini
+++ b/HWiNFOnet/HWiNFOnet.ini
@@ -1,7 +1,9 @@
 [Rainmeter]
-Update=2000
+Update=1000
+DynamicVariables=1
+Interface=Best
 AccurateText=1
-OnRefreshAction=[!SnapEdges "0" "#CURRENTCONFIG#"]
+OnRefreshAction=[!UpdateMeter CheckReset]
 
 [Metadata]
 Name=HWiNFOgpu
@@ -11,17 +13,8 @@ Version=December 7, 2021
 License=Creative Commons Attribution-Non-Commercial-Share Alike 3.0
 
 [Variables]
-; * Skin Authors
-; The easiest way to do this is to create variables for each of the values you 
-; will be using in the skin. Give them easy to understand variable names.
-; * Skin Users
-; Right click this skin and select "Display Sensors"
-; That will create a list of all the sensor elements you are "outputting" from HWiNFO in your default browser.
-; Find the Index number for each of the elements the skin needs and set the variables accordingly.
-; Note that if you later go back into HWiNFO and add or remove elements to "output",
-; these Index numbers will change!
+@IncludeVariables=#@#Setting.inc
 
-; Sensor Variables - You will certainly need to change these
 NetInData=13
 NetOutData=14
 NetInSpeed=15
@@ -57,50 +50,51 @@ Shape=Rectangle 0.5,0.5,#BackgroundW#,#BackgroundH#,12 | Fill Color 0, 0, 0,200 
 
 ; Measures
 [MeasureNetInSpeed]
-Measure=Registry
-RegHKey=HKEY_CURRENT_USER
-RegKey=SOFTWARE\HWiNFO32\VSB
-RegValue=ValueRaw#NetInSpeed#
-RegExpSubstitute=1
-Substitute="^.*]:":""
+Measure=NetIn
+
+[CalcNetInSpeed]
+Measure=Calc
+Formula=(MeasureNetInSpeed/1024)
 
 [MeasureNetOutSpeed]
-Measure=Registry
-RegHKey=HKEY_CURRENT_USER
-RegKey=SOFTWARE\HWiNFO32\VSB
-RegValue=ValueRaw#NetOutSpeed#
-RegExpSubstitute=1
-Substitute="^.*]:":""
+Measure=NetOut
+
+[CalcNetOutSpeed]
+Measure=Calc
+Formula=(MeasureNetOutSpeed/1024)
 
 [MeasureNetInData]
-Measure=Registry
-RegHKey=HKEY_CURRENT_USER
-RegKey=SOFTWARE\HWiNFO32\VSB
-RegValue=ValueRaw#NetInData#
-RegExpSubstitute=1
-Substitute="^.*]:":""
+Measure=NetIn
+Cumulative=1
+
+[CalcNetInData]
+Measure=Calc
+Formula=(MeasureNetInData/1024/1024)
 
 [MeasureNetOutData]
-Measure=Registry
-RegHKey=HKEY_CURRENT_USER
-RegKey=SOFTWARE\HWiNFO32\VSB
-RegValue=ValueRaw#NetOutData#
-RegExpSubstitute=1
-Substitute="^.*]:":""
+Measure=NetOut
+Cumulative=1
+
+[CalcNetOutData]
+Measure=Calc
+Formula=(MeasureNetOutData/1024/1024)
+
+[GetDate]
+Measure=Time
+Format=%#d
+UpdateDivider=-1
+
+[CheckReset]
+Measure=Calc
+UpdateDivider=-1
+Formula=GetDate=1?(-1):(0)
+IfEqualValue=(-1)
+IfEqualAction=!ResetStats
 
 ; Meters
-[MeterTextStyle]
-FontFace=#TextFont#
-FontColor=#ValueColor#
-FontSize=10
-;StringStyle=Bold
-FontWeight=400
-AntiAlias=1
-NumOfDecimals=0
-
 [MeterCardName]
 Meter=String
-MeterStyle=MeterTextStyle
+MeterStyle=MeterLabelStyle
 Text=Network
 FontColor=118,211,0,255
 FontSize=12
@@ -111,7 +105,7 @@ StringAlign=Center
 
 [MeterNetInSpeedLabel]
 Meter=String
-MeterStyle=MeterTextStyle
+MeterStyle=MeterLabelStyle
 FontSize=15
 Text=#NetworkIn# 
 X=(#BackgroundW#/4)
@@ -120,7 +114,7 @@ StringAlign=Center
 
 [MeterNetOutSpeedLabel]
 Meter=String
-MeterStyle=MeterTextStyle
+MeterStyle=MeterLabelStyle
 FontSize=15
 Text=#NetworkOut# 
 X=(#BackgroundW#*3/4)
@@ -129,8 +123,8 @@ StringAlign=Center
 
 [MeterNetInSpeed]
 Meter=String
-MeasureName=MeasureNetInSpeed
-MeterStyle=MeterTextStyle
+MeasureName=CalcNetInSpeed
+MeterStyle=MeterLabelStyle
 X=(#BackgroundW#/4)
 Y=5R
 StringAlign=Center
@@ -138,8 +132,8 @@ Text=%1 #Network#
 
 [MeterNetOutSpeed]
 Meter=String
-MeasureName=MeasureNetOutSpeed
-MeterStyle=MeterTextStyle
+MeasureName=CalcNetOutSpeed
+MeterStyle=MeterLabelStyle
 X=(#BackgroundW#*3/4)
 Y=0r
 StringAlign=Center
@@ -147,8 +141,8 @@ Text=%1 #Network#
 
 [MeterNetInData]
 Meter=String
-MeasureName=MeasureNetInData
-MeterStyle=MeterTextStyle
+MeasureName=CalcNetInData
+MeterStyle=MeterLabelStyle
 X=(#BackgroundW#/4)
 Y=5R
 StringAlign=Center
@@ -156,8 +150,8 @@ Text=%1 #Data#
 
 [MeterNetOutData]
 Meter=String
-MeasureName=MeasureNetOutData
-MeterStyle=MeterTextStyle
+MeasureName=CalcNetOutData
+MeterStyle=MeterLabelStyle
 X=(#BackgroundW#*3/4)
 Y=0r
 StringAlign=Center
