--- a/RMSKIN.ini
+++ b/RMSKIN.ini
@@ -1,6 +1,6 @@
 [rmskin]
-Name=HWiNFOgpu
-Author=JSMorley
+Name=HWiNFOStats
+Author=Afta Dizca Wahana
 Version=1.3
 LoadType=Skin
 Load=HWiNFOgpuNew\HWiNFOgpu.ini
