--- a/HWiNFOcpu/HWiNFOcpu.ini
+++ b/HWiNFOcpu/HWiNFOcpu.ini
@@ -5,8 +5,8 @@ OnRefreshAction=[!SnapEdges "0" "#CURRENTCONFIG#"]
 
 [Metadata]
 Name=HWiNFOcpu
-Author=JSMorley
-Information=Description:|HWInfo Graphics card information | Current settings are for my NVIDIA GeForce RTX 2080-Ti 
+Author=Afta Dizca Wahana
+Information=Description:|HWInfo CPU | Current settings are for my AMD Ryzen 3600 
 Version=December 7, 2021
 License=Creative Commons Attribution-Non-Commercial-Share Alike 3.0
 
