--- a/HWiNFOnet/HWiNFOnet.ini
+++ b/HWiNFOnet/HWiNFOnet.ini
@@ -7,8 +7,8 @@ OnRefreshAction=[!UpdateMeter CheckReset]
 
 [Metadata]
 Name=HWiNFOgpu
-Author=JSMorley
-Information=Description:|HWInfo Graphics card information | Current settings are for my NVIDIA GeForce RTX 2080-Ti 
+Author=Afta Dizca Wahana
+Information=Description:| Internet Meter 
 Version=December 7, 2021
 License=Creative Commons Attribution-Non-Commercial-Share Alike 3.0
 
