--- a/HWiNFOnet/HWiNFOnet.ini
+++ b/HWiNFOnet/HWiNFOnet.ini
@@ -3,7 +3,7 @@ Update=1000
 DynamicVariables=1
 Interface=Best
 AccurateText=1
-OnRefreshAction=[!UpdateMeter CheckReset]
+; OnRefreshAction=[!UpdateMeasure "CheckReset"]
 
 [Metadata]
 Name=HWiNFOgpu
@@ -15,11 +15,8 @@ License=Creative Commons Attribution-Non-Commercial-Share Alike 3.0
 [Variables]
 @IncludeVariables=#@#Setting.inc
 
-NetInData=13
-NetOutData=14
-NetInSpeed=15
-NetOutSpeed=16
-
+;Reset stats every month at 1st day
+ResetDate=1
 
 ; Font Variables
 TextFont=VictorMono NF
@@ -87,7 +84,7 @@ UpdateDivider=-1
 [CheckReset]
 Measure=Calc
 UpdateDivider=-1
-Formula=GetDate=1?(-1):(0)
+Formula=GetDate=#ResetDate#?(-1):(0)
 IfEqualValue=(-1)
 IfEqualAction=!ResetStats
 
