added Fan MEter

--- a/HWiNFOfan/HWiNFOfan.ini
+++ b/HWiNFOfan/HWiNFOfan.ini
@@ -1,6 +1,7 @@
 [Rainmeter]
 Update=2000
 AccurateText=1
+OnRefreshAction=[!SnapEdges "0" "#CURRENTCONFIG#"]
 
 [Metadata]
 Name=HWiNFOcpu
@@ -14,56 +15,56 @@ License=Creative Commons Attribution-Non-Commercial-Share Alike 3.0
 
 [MeterAllBackground]
 Meter=Shape
-Shape=Rectangle 0.5,0.5,#BackgroundW#,250,12 | Fill Color #BackgroundColor# | StrokeWidth 0 | Stroke Color #FrameColor#
+Shape=Rectangle 0.5,0.5,#BackgroundW#,235,12 | Fill Color #BackgroundColor# | StrokeWidth 0 | Stroke Color #FrameColor#
 
 ;=======================================Measures============================================;
-[MeasureTempDegrees]
+[MeasureFanCPU]
 Measure=Registry
 RegHKey=HKEY_CURRENT_USER
 RegKey=SOFTWARE\HWiNFO32\VSB
-RegValue=ValueRaw#CPUTempDegrees#
-MinValue=30
-MaxValue=100
+RegValue=ValueRaw#FanCPU#
+MinValue=500
+MaxValue=1800
 RegExpSubstitute=1
 Substitute="^.*]:":""
 
-[MeasureCoreClockSpeedMHz]
+[MeasureFanWP]
 Measure=Registry
 RegHKey=HKEY_CURRENT_USER
 RegKey=SOFTWARE\HWiNFO32\VSB
-RegValue=ValueRaw#CPUCoreClockSpeedMHz#
+RegValue=ValueRaw#FanWP#
 MinValue=0
-MaxValue=4200
+MaxValue=2400
 RegExpSubstitute=1
 Substitute="^.*]:":""
 
-[MeasureCPUPowerW]
+[MeasureFanChassis1]
 Measure=Registry
 RegHKey=HKEY_CURRENT_USER
 RegKey=SOFTWARE\HWiNFO32\VSB
-RegValue=ValueRaw#CPUPowerW#
+RegValue=ValueRaw#FanChassis1#
 MinValue=0
-MaxValue=65
+MaxValue=1000
 RegExpSubstitute=1
 Substitute="^.*]:":""
 
-[MeasureCPUCoreLoad]
+[MeasureFanChassis2]
 Measure=Registry
 RegHKey=HKEY_CURRENT_USER
 RegKey=SOFTWARE\HWiNFO32\VSB
-RegValue=ValueRaw#CPUCoreLoad#
+RegValue=ValueRaw#FanChassis2#
 MinValue=0
-MaxValue=100
+MaxValue=1000
 RegExpSubstitute=1
 Substitute="^.*]:":""
 
-[MeasureCPUMemoryMB]
+[MeasureFanChassis3]
 Measure=Registry
 RegHKey=HKEY_CURRENT_USER
 RegKey=SOFTWARE\HWiNFO32\VSB
-RegValue=ValueRaw#CPUMemoryMB#
+RegValue=ValueRaw#FanChassis3#
 MinValue=0
-MaxValue=32000
+MaxValue=1000
 RegExpSubstitute=1
 Substitute="^.*]:":""
 
@@ -71,7 +72,7 @@ Substitute="^.*]:":""
 
 [MeterCardName]
 Meter=String
-Text=CPU
+Text=FAN
 MeterStyle=MeterLabelStyle
 FontColor=#Accent#
 FontSize=12
@@ -79,133 +80,126 @@ FontWeight=900
 X=(#BackgroundW#/2)
 Y=15
 StringAlign=Center
-
-[MeterCardName2]
-Meter=String
-Text=[AMD Ryzen 3600]
-MeterStyle=MeterLabelStyle
-FontColor=#Accent#
-FontSize=8
-X=(#BackgroundW#/2)
-Y=0R
-StringAlign=Center
-
-[MeterCoreLoadIcon]
+;--------------------------------------------------
+[MeterFanCPUIcon]
 Meter=String
 MeterStyle=MeterIconStyle
-Text=#Load#
+Text=#Fan#
 
-[MeterCoreLoadLabel]
+[MeterFanCPULabel]
 Meter=String
 MeterStyle=MeterLabelStyle
-Text=Load
+Text=AIO
 
-[MeterCoreLoad]
+[MeterFanCPU]
 Meter=String
-MeasureName=MeasureCPUCoreLoad
+MeasureName=MeasureFanCPU
 MeterStyle=MeterValueTextStyle
 X=#ValueX#
 Y=0r
 StringAlign=Right
-Text=%1 #Percents#
+Text=%1 #FanSpeeds#
 
-[MeterCoreLoadBar]
-MeasureName=MeasureCPUCoreLoad
+[MeterFanCPUBar]
+MeasureName=MeasureFanCPU
+Meter=Bar
+MeterStyle=BarStyle
+;--------------------------------------------------
+[MeterFanWPIcon]
+Meter=String
+MeterStyle=MeterIconStyle
+Text=#Fan#
+
+[MeterFanWPLabel]
+Meter=String
+MeterStyle=MeterLabelStyle
+Text=Water Pump
+
+[MeterFanWP]
+Meter=String
+MeasureName=MeasureFanWP
+MeterStyle=MeterValueTextStyle
+X=#ValueX#
+Y=0r
+StringAlign=Right
+Text=%1 #FanSpeeds#
+
+[MeterFanWPBar]
+MeasureName=MeasureFanWP
 Meter=Bar
 MeterStyle=BarStyle
 
-[MeterCoreClockSpeedIcon]
+;--------------------------------------------------
+[MeterFanChassis1Icon]
 Meter=String
 MeterStyle=MeterIconStyle
-Text=#Clock#
+Text=#Fan#
 
-[MeterCoreClockSpeedLabel]
+[MeterFanChassis1Label]
 Meter=String
 MeterStyle=MeterLabelStyle
-Text=Clock
+Text=Chassis1
 
-[MeterCoreClockSpeedMHz]
+[MeterFanChassis1]
 Meter=String
-MeasureName=MeasureCoreClockSpeedMHz
+MeasureName=MeasureFanChassis1
 MeterStyle=MeterValueTextStyle
 X=#ValueX#
 Y=0r
 StringAlign=Right
-Text=%1 #ClockSpeeds#
+Text=%1 #FanSpeeds#
 
-[CoreClockSpeedBar]
-MeasureName=MeasureCoreClockSpeedMHz
+[MeterFanChassis1Bar]
+MeasureName=MeasureFanChassis1
 Meter=Bar
 MeterStyle=BarStyle
 
-[MeterTempIcon]
+;--------------------------------------------------
+[MeterFanChassis2Icon]
 Meter=String
 MeterStyle=MeterIconStyle
-Text=#Temp#
+Text=#Fan#
 
-[MeterTempLabel]
+[MeterFanChassis2Label]
 Meter=String
-Text=Temp
 MeterStyle=MeterLabelStyle
+Text=Chassis2
 
-[MeterTemp]
+[MeterFanChassis2]
 Meter=String
-MeasureName=MeasureTempDegrees
+MeasureName=MeasureFanChassis2
 MeterStyle=MeterValueTextStyle
 X=#ValueX#
 Y=0r
 StringAlign=Right
-Text=%1 #Temperatures#
+Text=%1 #FanSpeeds#
 
-[TempBar]
-MeasureName=MeasureTempDegrees
+[MeterFanChassis2Bar]
+MeasureName=MeasureFanChassis2
 Meter=Bar
 MeterStyle=BarStyle
 
-[MeterPowerIcon]
+;--------------------------------------------------
+[MeterFanChassis3Icon]
 Meter=String
 MeterStyle=MeterIconStyle
-Text=#Power#
+Text=#Fan#
 
-[MeterPowerWLabel]
+[MeterFanChassis3Label]
 Meter=String
 MeterStyle=MeterLabelStyle
-Text=TCP
+Text=Chassis3
 
-[MeterPowerW]
+[MeterFanChassis3]
 Meter=String
-MeasureName=MeasureCPUPowerW
+MeasureName=MeasureFanChassis3
 MeterStyle=MeterValueTextStyle
 X=#ValueX#
 Y=0r
 StringAlign=Right
-Text=%1 #Powers#
+Text=%1 #FanSpeeds#
 
-[PowerWLoadBar]
-MeasureName=MeasureTempDegrees
-Meter=Bar
-MeterStyle=BarStyle
-
-[MeterMemoryIcon]
-Meter=String
-MeterStyle=MeterIconStyle
-Text=#Memory#
-
-[MeterMemoryMBLabel]
-Meter=String
-MeterStyle=MeterLabelStyle
-Text=Memory Usage
-
-[MeterMemoryMB]
-Meter=String
-MeasureName=MeasureCPUMemoryMB
-MeterStyle=MeterValueTextStyle
-X=#ValueX#
-Y=0r
-StringAlign=Right
-Text=%1 #Memories#
-
-[MeterMemoryMbBar]
-MeasureName=MeasureCPUMemoryMB
+[MeterFanChassis3Bar]
+MeasureName=MeasureFanChassis3
 Meter=Bar
 MeterStyle=BarStyle
