--- a/HWiNFOcpu/HWiNFOcpu.ini
+++ b/HWiNFOcpu/HWiNFOcpu.ini
@@ -1,5 +1,5 @@
 [Rainmeter]
-Update=2000
+Update=1000
 AccurateText=1
 
 [Metadata]
@@ -18,54 +18,59 @@ Shape=Rectangle 0.5,0.5,#BackgroundW#,250,12 | Fill Color #BackgroundColor# | St
 
 ;=======================================Measures============================================;
 [MeasureTempDegrees]
-Measure=Registry
-RegHKey=HKEY_CURRENT_USER
-RegKey=SOFTWARE\HWiNFO32\VSB
-RegValue=ValueRaw#CPUTempDegrees#
-MinValue=30
+Measure=Plugin
+Plugin=HWiNFO.dll
+HWiNFOSensorId=#CPUTempID#
+HWiNFOSensorInstance=#CPUTempIns#
+HWiNFOEntryId=#CPUTempEntry#
+HWiNFOType=CurrentValue
+HWiNFOLogHandler=2
+MinValue=0
 MaxValue=100
-RegExpSubstitute=1
-Substitute="^.*]:":""
 
 [MeasureCoreClockSpeedMHz]
-Measure=Registry
-RegHKey=HKEY_CURRENT_USER
-RegKey=SOFTWARE\HWiNFO32\VSB
-RegValue=ValueRaw#CPUCoreClockSpeedMHz#
+Measure=Plugin
+Plugin=HWiNFO.dll
+HWiNFOSensorId=#CPUClockID#
+HWiNFOSensorInstance=#CPUClockIns#
+HWiNFOEntryId=#CPUClockEntry#
+HWiNFOType=CurrentValue
+HWiNFOLogHandler=2
 MinValue=0
 MaxValue=4200
-RegExpSubstitute=1
-Substitute="^.*]:":""
 
 [MeasureCPUPowerW]
-Measure=Registry
-RegHKey=HKEY_CURRENT_USER
-RegKey=SOFTWARE\HWiNFO32\VSB
-RegValue=ValueRaw#CPUPowerW#
+Measure=Plugin
+Plugin=HWiNFO.dll
+HWiNFOSensorId=#CPUPowerID#
+HWiNFOSensorInstance=#CPUPowerIns#
+HWiNFOEntryId=#CPUPowerEntry#
+HWiNFOType=CurrentValue
+HWiNFOLogHandler=2
 MinValue=0
 MaxValue=65
-RegExpSubstitute=1
-Substitute="^.*]:":""
 
 [MeasureCPUCoreLoad]
-Measure=Registry
-RegHKey=HKEY_CURRENT_USER
-RegKey=SOFTWARE\HWiNFO32\VSB
-RegValue=ValueRaw#CPUCoreLoad#
+Measure=Plugin
+Plugin=HWiNFO.dll
+HWiNFOSensorId=#CPULoadID#
+HWiNFOSensorInstance=#CPULoadIns#
+HWiNFOEntryId=#CPULoadEntry#
+HWiNFOType=CurrentValue
+HWiNFOLogHandler=2
 MinValue=0
 MaxValue=100
-RegExpSubstitute=1
-Substitute="^.*]:":""
 
 [MeasureCPUMemoryMB]
-Measure=Registry
-RegHKey=HKEY_CURRENT_USER
-RegKey=SOFTWARE\HWiNFO32\VSB
-RegValue=ValueRaw#CPUMemoryMB#
+Measure=Plugin
+Plugin=HWiNFO.dll
+HWiNFOSensorId=#CPUMemoryID#
+HWiNFOSensorInstance=#CPUMemoryIns#
+HWiNFOEntryId=#CPUMemoryEntry#
+HWiNFOType=CurrentValue
+HWiNFOLogHandler=2
 MinValue=0
 MaxValue=32000
-RegExpSubstitute=1
-Substitute="^.*]:":""
 
 ;===============================================Meters======================================;
 
