--- a/HWiNFOgpu/HWiNFOgpu.ini
+++ b/HWiNFOgpu/HWiNFOgpu.ini
@@ -1,7 +1,6 @@
 [Rainmeter]
-Update=2000
+Update=1000
 AccurateText=1
-OnRefreshAction=[!SnapEdges "0" "#CURRENTCONFIG#"]
 
 [Metadata]
 Name=HWiNFOgpu
@@ -20,84 +19,92 @@ Shape=Rectangle 0.5,0.5,#BackgroundW#,350,12 | Fill Color #BackgroundColor# | St
 
 ;==================== Measures ========================;
 [MeasureTempDegreesCenter]
-Measure=Registry
-RegHKey=HKEY_CURRENT_USER
-RegKey=SOFTWARE\HWiNFO32\VSB
-RegValue=ValueRaw#GPUTempDegreesCenter#
-MinValue=30
+Measure=Plugin
+Plugin=HWiNFO.dll
+HWiNFOSensorId=#GPUID#
+HWiNFOSensorInstance=#GPUIns#
+HWiNFOEntryId=#GPUTempCenter#
+HWiNFOType=CurrentValue
+HWiNFOLogHandler=2
+MinValue=0
 MaxValue=100
-RegExpSubstitute=1
-Substitute="^.*]:":""
 
 [MeasureTempDegreesEdge]
-Measure=Registry
-RegHKey=HKEY_CURRENT_USER
-RegKey=SOFTWARE\HWiNFO32\VSB
-RegValue=ValueRaw#GPUTempDegreesEdge#
-MinValue=30
+Measure=Plugin
+Plugin=HWiNFO.dll
+HWiNFOSensorId=#GPUID#
+HWiNFOSensorInstance=#GPUIns#
+HWiNFOEntryId=#GPUTempEdge#
+HWiNFOType=CurrentValue
+HWiNFOLogHandler=2
+MinValue=0
 MaxValue=100
-RegExpSubstitute=1
-Substitute="^.*]:":""
 
 [MeasureFanSpeedRPM]
-Measure=Registry
-RegHKey=HKEY_CURRENT_USER
-RegKey=SOFTWARE\HWiNFO32\VSB
-RegValue=ValueRaw#GPUFanSpeedRPM#
+Measure=Plugin
+Plugin=HWiNFO.dll
+HWiNFOSensorId=#GPUID#
+HWiNFOSensorInstance=#GPUIns#
+HWiNFOEntryId=#GPUFan#
+HWiNFOType=CurrentValue
+HWiNFOLogHandler=2
 MinValue=0
 MaxValue=3500
-RegExpSubstitute=1
-Substitute="^.*]:":""
 
 [MeasureCoreClockSpeedMHz]
-Measure=Registry
-RegHKey=HKEY_CURRENT_USER
-RegKey=SOFTWARE\HWiNFO32\VSB
-RegValue=ValueRaw#GPUCoreClockSpeedMHz#
+Measure=Plugin
+Plugin=HWiNFO.dll
+HWiNFOSensorId=#GPUID#
+HWiNFOSensorInstance=#GPUIns#
+HWiNFOEntryId=#GPUCoreClock#
+HWiNFOType=CurrentValue
+HWiNFOLogHandler=2
 MinValue=0
 MaxValue=2700
-RegExpSubstitute=1
-Substitute="^.*]:":""
 
 [MeasureGPUPowerW]
-Measure=Registry
-RegHKey=HKEY_CURRENT_USER
-RegKey=SOFTWARE\HWiNFO32\VSB
-RegValue=ValueRaw#GPUPowerW#
+Measure=Plugin
+Plugin=HWiNFO.dll
+HWiNFOSensorId=#GPUID#
+HWiNFOSensorInstance=#GPUIns#
+HWiNFOEntryId=#GPUPower#
+HWiNFOType=CurrentValue
+HWiNFOLogHandler=2
 MinValue=0
 MaxValue=230
-RegExpSubstitute=1
-Substitute="^.*]:":""
 
 [MeasureGPUCoreLoad]
-Measure=Registry
-RegHKey=HKEY_CURRENT_USER
-RegKey=SOFTWARE\HWiNFO32\VSB
-RegValue=ValueRaw#GPUCoreLoad#
+Measure=Plugin
+Plugin=HWiNFO.dll
+HWiNFOSensorId=#GPUID#
+HWiNFOSensorInstance=#GPUIns#
+HWiNFOEntryId=#GPULoad#
+HWiNFOType=CurrentValue
+HWiNFOLogHandler=2
 MinValue=0
 MaxValue=100
-RegExpSubstitute=1
-Substitute="^.*]:":""
 
 [MeasureGPUMemoryClock]
-Measure=Registry
-RegHKey=HKEY_CURRENT_USER
-RegKey=SOFTWARE\HWiNFO32\VSB
-RegValue=ValueRaw#GPUMemoryClock#
+Measure=Plugin
+Plugin=HWiNFO.dll
+HWiNFOSensorId=#GPUID#
+HWiNFOSensorInstance=#GPUIns#
+HWiNFOEntryId=#GPUMemoryClock#
+HWiNFOType=CurrentValue
+HWiNFOLogHandler=2
 MinValue=0
 MaxValue=2250
-RegExpSubstitute=1
-Substitute="^.*]:":""
 
 [MeasureGPUMemoryMB]
-Measure=Registry
-RegHKey=HKEY_CURRENT_USER
-RegKey=SOFTWARE\HWiNFO32\VSB
-RegValue=ValueRaw#GPUMemoryMB#
+Measure=Plugin
+Plugin=HWiNFO.dll
+HWiNFOSensorId=#GPUID#
+HWiNFOSensorInstance=#GPUIns#
+HWiNFOEntryId=#GPUMemory#
+HWiNFOType=CurrentValue
+HWiNFOLogHandler=2
 MinValue=0
-MaxValue=12288
-RegExpSubstitute=1
-Substitute="^.*]:":""
+MaxValue=12000
 
 ; ========================================= Meters =============================================;
 [MeterCardName]
