--- a/HWiNFOcpu/HWiNFOcpu.ini
+++ b/HWiNFOcpu/HWiNFOcpu.ini
@@ -21,7 +21,7 @@ Shape=Rectangle 0.5,0.5,#BackgroundW#,250,12 | Fill Color #BackgroundColor# | St
 Measure=Plugin
 Plugin=HWiNFO.dll
 HWiNFOSensorId=#CPUTempID#
-HWiNFOSensorInstance=#CPUTempIns#
+HWiNFOSensorInstance=#CPUIns#
 HWiNFOEntryId=#CPUTempEntry#
 HWiNFOType=CurrentValue
 HWiNFOLogHandler=2
@@ -32,7 +32,7 @@ MaxValue=100
 Measure=Plugin
 Plugin=HWiNFO.dll
 HWiNFOSensorId=#CPUClockID#
-HWiNFOSensorInstance=#CPUClockIns#
+HWiNFOSensorInstance=#CPUIns#
 HWiNFOEntryId=#CPUClockEntry#
 HWiNFOType=CurrentValue
 HWiNFOLogHandler=2
@@ -43,7 +43,7 @@ MaxValue=4200
 Measure=Plugin
 Plugin=HWiNFO.dll
 HWiNFOSensorId=#CPUPowerID#
-HWiNFOSensorInstance=#CPUPowerIns#
+HWiNFOSensorInstance=#CPUIns#
 HWiNFOEntryId=#CPUPowerEntry#
 HWiNFOType=CurrentValue
 HWiNFOLogHandler=2
@@ -54,7 +54,7 @@ MaxValue=65
 Measure=Plugin
 Plugin=HWiNFO.dll
 HWiNFOSensorId=#CPULoadID#
-HWiNFOSensorInstance=#CPULoadIns#
+HWiNFOSensorInstance=#CPUIns#
 HWiNFOEntryId=#CPULoadEntry#
 HWiNFOType=CurrentValue
 HWiNFOLogHandler=2
@@ -65,7 +65,7 @@ MaxValue=100
 Measure=Plugin
 Plugin=HWiNFO.dll
 HWiNFOSensorId=#CPUMemoryID#
-HWiNFOSensorInstance=#CPUMemoryIns#
+HWiNFOSensorInstance=#CPUIns#
 HWiNFOEntryId=#CPUMemoryEntry#
 HWiNFOType=CurrentValue
 HWiNFOLogHandler=2
