--- a/HWiNFOfan/HWiNFOfan.ini
+++ b/HWiNFOfan/HWiNFOfan.ini
@@ -19,54 +19,59 @@ Shape=Rectangle 0.5,0.5,#BackgroundW#,235,12 | Fill Color #BackgroundColor# | St
 
 ;=======================================Measures============================================;
 [MeasureFanCPU]
-Measure=Registry
-RegHKey=HKEY_CURRENT_USER
-RegKey=SOFTWARE\HWiNFO32\VSB
-RegValue=ValueRaw#FanCPU#
+Measure=Plugin
+Plugin=HWiNFO.dll
+HWiNFOSensorId=#FanID#
+HWiNFOSensorInstance=#FanIns#
+HWiNFOEntryId=#FanCPU#
+HWiNFOType=CurrentValue
+HWiNFOLogHandler=2
 MinValue=500
 MaxValue=1800
-RegExpSubstitute=1
-Substitute="^.*]:":""
 
 [MeasureFanWP]
-Measure=Registry
-RegHKey=HKEY_CURRENT_USER
-RegKey=SOFTWARE\HWiNFO32\VSB
-RegValue=ValueRaw#FanWP#
+Measure=Plugin
+Plugin=HWiNFO.dll
+HWiNFOSensorId=#FanID#
+HWiNFOSensorInstance=#FanIns#
+HWiNFOEntryId=#FanWP#
+HWiNFOType=CurrentValue
+HWiNFOLogHandler=2
 MinValue=0
 MaxValue=2400
-RegExpSubstitute=1
-Substitute="^.*]:":""
 
 [MeasureFanChassis1]
-Measure=Registry
-RegHKey=HKEY_CURRENT_USER
-RegKey=SOFTWARE\HWiNFO32\VSB
-RegValue=ValueRaw#FanChassis1#
+Measure=Plugin
+Plugin=HWiNFO.dll
+HWiNFOSensorId=#FanID#
+HWiNFOSensorInstance=#FanIns#
+HWiNFOEntryId=#FanChassis1#
+HWiNFOType=CurrentValue
+HWiNFOLogHandler=2
 MinValue=0
 MaxValue=1000
-RegExpSubstitute=1
-Substitute="^.*]:":""
 
 [MeasureFanChassis2]
-Measure=Registry
-RegHKey=HKEY_CURRENT_USER
-RegKey=SOFTWARE\HWiNFO32\VSB
-RegValue=ValueRaw#FanChassis2#
+Measure=Plugin
+Plugin=HWiNFO.dll
+HWiNFOSensorId=#FanID#
+HWiNFOSensorInstance=#FanIns#
+HWiNFOEntryId=#FanChassis2#
+HWiNFOType=CurrentValue
+HWiNFOLogHandler=2
 MinValue=0
 MaxValue=1000
-RegExpSubstitute=1
-Substitute="^.*]:":""
 
 [MeasureFanChassis3]
-Measure=Registry
-RegHKey=HKEY_CURRENT_USER
-RegKey=SOFTWARE\HWiNFO32\VSB
-RegValue=ValueRaw#FanChassis3#
+Measure=Plugin
+Plugin=HWiNFO.dll
+HWiNFOSensorId=#FanID#
+HWiNFOSensorInstance=#FanIns#
+HWiNFOEntryId=#FanChassis3#
+HWiNFOType=CurrentValue
+HWiNFOLogHandler=2
 MinValue=0
 MaxValue=1000
-RegExpSubstitute=1
-Substitute="^.*]:":""
 
 ;===============================================Meters======================================;
 
