--- a/HWiNFOgpu/HWiNFOgpu.ini
+++ b/HWiNFOgpu/HWiNFOgpu.ini
@@ -14,7 +14,7 @@ License=Creative Commons Attribution-Non-Commercial-Share Alike 3.0
 
 [MeterAllBackground]
 Meter=Shape
-Shape=Rectangle 0.5,0.5,#BackgroundW#,350,12 | Fill Color #BackgroundColor# | StrokeWidth 0 | Stroke Color #FrameColor#
+Shape=Rectangle 0.5,0.5,#BackgroundW#,410,12 | Fill Color #BackgroundColor# | StrokeWidth 0 | Stroke Color #FrameColor#
 
 
 ;==================== Measures ========================;
@@ -105,6 +105,15 @@ HWiNFOType=CurrentValue
 HWiNFOLogHandler=2
 MinValue=0
 MaxValue=12000
+
+[MeasureGPUFramerate]
+Measure=Plugin
+Plugin=HWiNFO.dll
+HWiNFOSensorId=#GPUID#
+HWiNFOSensorInstance=#GPUIns#
+HWiNFOEntryId=#GPUFPS#
+HWiNFOType=CurrentValue
+HWiNFOLogHandler=2
 
 ; ========================================= Meters =============================================;
 [MeterCardName]
@@ -320,3 +329,19 @@ Text=%1 #Memories#
 MeasureName=MeasureGPUMemoryMB
 Meter=Bar
 MeterStyle=BarStyle
+
+[MeterFramerateLabel]
+Meter=String
+MeterStyle=MeterLabelStyle
+Y=20R
+Text=FPS
+
+[MeterFramerate]
+Meter=String
+MeasureName=MeasureGPUFramerate
+MeterStyle=MeterValueTextStyle
+FontSize=20
+X=(#BackgroundW#/2)
+Y=10r
+StringAlign=Center
+Text=%1
