--- a/HWiNFOfan/HWiNFOfan.ini
+++ b/HWiNFOfan/HWiNFOfan.ini
@@ -15,7 +15,7 @@ License=Creative Commons Attribution-Non-Commercial-Share Alike 3.0
 
 [MeterAllBackground]
 Meter=Shape
-Shape=Rectangle 0.5,0.5,#BackgroundW#,235,12 | Fill Color #BackgroundColor# | StrokeWidth 0 | Stroke Color #FrameColor#
+Shape=Rectangle 0.5,0.5,#BackgroundW#,235,RoundedCorner | Fill Color #BackgroundColor# | StrokeWidth 0 | Stroke Color #FrameColor#
 
 ;=======================================Measures============================================;
 [MeasureFanCPU]
