--- a/HWiNFOnet/HWiNFOnet.ini
+++ b/HWiNFOnet/HWiNFOnet.ini
@@ -18,32 +18,13 @@ License=Creative Commons Attribution-Non-Commercial-Share Alike 3.0
 ;Reset stats every month at 1st day
 ResetDate=1
 
-; Font Variables
-TextFont=VictorMono NF
-
-; Color Variables
-LabelColor=250,250,250
-ValueColor=255,255,255
-FrameColor=255,0,0,255
-BarBackColor=#LabelColor#,75
-BackgroundAlpha=200
-BackgroundColor=0,0,0,#BackgroundAlpha#
-
-
 ;Variable Size
-BackgroundH=120
+BackgroundH=105
 BackgroundW=250
-
-; Unit Symbol Variables
-Network=KB/s
-Data=MB
-
-NetworkIn=[\xfbbe]
-NetworkOut=[\xfbc1]
 
 [MeterAllBackground]
 Meter=Shape
-Shape=Rectangle 0.5,0.5,#BackgroundW#,#BackgroundH#,12 | Fill Color 0, 0, 0,200 | StrokeWidth 0 | Stroke Color #FrameColor#
+Shape=Rectangle 0.5,0.5,#BackgroundW#,#BackgroundH#,RoundedCorner | Fill Color 0, 0, 0,200 | StrokeWidth 0 | Stroke Color #FrameColor#
 
 ; Measures
 [MeasureNetInSpeed]
