--- a/HWiNFOgpuMini/HWiNFOgpuMini.ini
+++ b/HWiNFOgpuMini/HWiNFOgpuMini.ini
@@ -94,7 +94,7 @@ HWiNFOEntryId=#GPUMemory#
 HWiNFOType=CurrentValue
 HWiNFOLogHandler=2
 MinValue=0
-MaxValue=12000
+MaxValue=12288
 
 
 ;===============================================Meters======================================;
@@ -111,7 +111,6 @@ StringAlign=Left
 [MeterCoreLoad]
 Meter=String
 MeasureName=MeasureGPUCoreLoad
-MeasureName2=MeterCoreLoadUnit
 MeterStyle=MeterValueTextStyle
 X=10R
 Y=#GY#
@@ -155,22 +154,23 @@ InlinePattern2=#Powers#
 
 [RoundGPUMemory]
 Measure=Calc
-Formula=(ROUND([MeasureGPUMemoryMB:%],1))
+Formula=ROUND([MeasureGPUMemoryMB]/1024,1)
 DynamicVariables=1
 
 [MeterGPUMemory]
 Meter=String
 MeasureName=RoundGPUMemory
 MeterStyle=MeterValueTextStyle
+NumOfDecimals=1
 X=10R
 Y=#GY#
-W=18
+W=26
 StringAlign=Left
-Text=%1#Percents#
+Text=%1GB
 InlineSetting=Color | #Accent#
-InlinePattern=#Percents#
+InlinePattern=GB
 InlineSetting2=Size | 6
-InlinePattern2=#Percents#
+InlinePattern2=GB
 
 
 [MeterGPUMemoryClock]
